--- a/MusicDecrypto.Avalonia/Views/MainView.axaml
+++ b/MusicDecrypto.Avalonia/Views/MainView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ic="using:FluentIcons.FluentAvalonia"
+             xmlns:ic="using:FluentIcons.Avalonia.Fluent"
              xmlns:ui="using:FluentAvalonia.UI.Controls"
              d:DesignWidth="800" d:DesignHeight="450"
              mc:Ignorable="d">
@@ -15,7 +15,6 @@
             <Grid.Styles>
                 <Style Selector="Button.AppBarButton">
                     <Setter Property="Padding" Value="8" />
-                    <Setter Property="FontSize" Value="20" />
                     <Setter Property="BorderThickness" Value="0" />
                     <Setter Property="Theme" Value="{StaticResource TransparentButton}" />
                 </Style>
@@ -31,7 +30,7 @@
                     IsEnabled="{Binding #FrameView.CanGoBack}"
                     IsVisible="{Binding #FrameView.CanGoBack}">
                 <Button.Content>
-                    <ic:SymbolIcon FontSize="20" Symbol="ArrowLeft" />
+                    <ic:SymbolIcon Symbol="ArrowLeft" />
                 </Button.Content>
                 <ToolTip.Tip>Back</ToolTip.Tip>
             </Button>
