--- a/MusicDecrypto.Avalonia/Controls/MatchDialogContent.axaml
+++ b/MusicDecrypto.Avalonia/Controls/MatchDialogContent.axaml
@@ -6,12 +6,12 @@
              d:DesignWidth="800" d:DesignHeight="450"
              mc:Ignorable="d">
 
-    <DataGrid ItemsSource="{Binding Properties}" IsReadOnly="True" CanUserSortColumns="False">
+    <DataGrid ItemsSource="{Binding Items}" IsReadOnly="True" CanUserSortColumns="False">
         <DataGrid.Columns>
             <DataGridTextColumn Binding="{Binding Key}" Header="Source" />
-            <DataGridTextColumn Binding="{Binding Title}" Header="Title" />
-            <DataGridTextColumn Binding="{Binding Performers}" Header="Performers" />
-            <DataGridTextColumn Binding="{Binding Album}" Header="Album" />
+            <DataGridTextColumn Binding="{Binding Value.Title}" Header="Title" />
+            <DataGridTextColumn Binding="{Binding Value.Performers}" Header="Performers" />
+            <DataGridTextColumn Binding="{Binding Value.Album}" Header="Album" />
         </DataGrid.Columns>
     </DataGrid>
 </UserControl>
